tests/fixtures/invalid/pow_none_list_str.py
# Cannot call pow() with None, List[int], Str
x = pow(None, [1, 2, 3], "hello")
